# backend/docs/swagger.json
@@ -42,9 +42,7 @@
                 "responses": {
                     "200": {
                         "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/company.Company"
-                        }
+                        "schema": {}
                     }
                 }
             }
